Add comments for better understading for the scripts.js

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div id="win-message" class="win-message hidden">
-            <h2>🎉 You Win! 🎉</h2>
+            <h2>You Win!</h2>
             <p>Completed in <span id="final-moves">0</span> moves!</p>
         </div>
     </div>
