--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <link rel="stylesheet" href="/styles/styles.css">
 </head>
 <body>
-    <div class="container">
+    <div id="welcome-screen" class="welcome-screen">
+        <div class="content">
+            <h1>Memory Card Game</h1>
+            <p>Test your memory! Find all matching pairs of cards.</p>
+            <button id="start-btn">Start Game</button>
+        </div>
+    </div>
+
+    <div id="game-container" class="container hidden">
         <h1>Memory Card Game</h1>
         
         <div class="game-info">
