--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
     <div id="welcome-screen" class="welcome-screen">
         <div class="content">
             <h1>Memory Card Game</h1>
-            <p>Test your memory! Find all matching pairs of cards.</p>
-            <button id="start-btn">Start Game</button>
+            <p>Select your difficulty:</p>
+            <div class="difficulty-buttons">
+                <button class="diff-btn" data-level="chill">Chill (No Timer)</button>
+                <button class="diff-btn" data-level="easy">Easy (60s)</button>
+                <button class="diff-btn" data-level="medium">Medium (45s)</button>
+                <button class="diff-btn" data-level="hard">Hard (30s)</button>
+                <button class="diff-btn" data-level="wth">WTH (15s)</button>
+            </div>
         </div>
     </div>
 
@@ -22,6 +28,9 @@
             <div class="moves">
                 Moves: <span id="move-count">0</span>
             </div>
+            <div class="timer">
+                Time: <span id="timer">--</span>
+            </div>
             <button id="restart-btn">Restart Game</button>
         </div>
 
@@ -31,6 +40,13 @@
         <div id="win-message" class="win-message hidden">
             <h2>You Win!</h2>
             <p>Completed in <span id="final-moves">0</span> moves!</p>
+            <button class="play-again-btn">Play Again</button>
+        </div>
+
+        <div id="game-over-message" class="win-message hidden">
+            <h2 style="color: #e53e3e;">Game Over!</h2>
+            <p>Time ran out!</p>
+            <button class="play-again-btn">Try Again</button>
         </div>
     </div>
 
