Instead of a timer, use a health bar like

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="moves">
                 Moves: <span id="move-count">0</span>
             </div>
-            <div class="timer">
-                Time: <span id="timer">--</span>
+            <div class="timer-container">
+                <div id="timer-bar"></div>
             </div>
             <button id="restart-btn">Restart Game</button>
         </div>
