Add back to main menu when the game is done

--- a/index.html
+++ b/index.html
@@ -40,13 +40,19 @@
         <div id="win-message" class="win-message hidden">
             <h2>You Win!</h2>
             <p>Completed in <span id="final-moves">0</span> moves!</p>
-            <button class="play-again-btn">Play Again</button>
+            <div class="modal-buttons">
+                <button class="play-again-btn">Play Again</button>
+                <button class="main-menu-btn">Main Menu</button>
+            </div>
         </div>
 
         <div id="game-over-message" class="win-message hidden">
             <h2 style="color: #e53e3e;">Game Over!</h2>
             <p>Time ran out!</p>
-            <button class="play-again-btn">Try Again</button>
+            <div class="modal-buttons">
+                <button class="play-again-btn">Try Again</button>
+                <button class="main-menu-btn">Main Menu</button>
+            </div>
         </div>
     </div>
 
