Add an explaination of the score for the user to understand the scoring

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
                 <div class="detail-item">⏱️ Time: <span id="final-time">0</span>s</div>
                 <div class="detail-item">⚡ Multiplier: <span id="final-multiplier">1x</span></div>
             </div>
+            
+            <button id="score-explain-btn" class="text-btn">How is this calculated? ▼</button>
+            <div id="score-explanation" class="score-explanation hidden">
+                <p><strong>Accuracy (60%):</strong> Based on your Right Moves vs Total Moves.</p>
+                <p><strong>Speed (40%):</strong> Based on how much time you had left.</p>
+                <p><strong>Multiplier:</strong> Harder difficulties boost your final score!</p>
+                <div id="score-formula" class="score-formula"></div>
+            </div>
 
             <div class="modal-buttons">
                 <button class="play-again-btn">Play Again</button>
