Change the Right and Wrong words to Emoji

--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
         <div class="game-info">
             <div class="stats">
                 <div class="stat-item">Moves: <span id="move-count">0</span></div>
-                <div class="stat-item right">Right: <span id="right-count">0</span></div>
-                <div class="stat-item wrong">Wrong: <span id="wrong-count">0</span></div>
+                <div class="stat-item right">✅ <span id="right-count">0</span></div>
+                <div class="stat-item wrong">❌ <span id="wrong-count">0</span></div>
             </div>
             <div class="timer-container">
                 <div id="timer-bar"></div>
             </div>
-            <button id="restart-btn">Restart Game</button>
+            <div class="game-buttons">
+                <button id="restart-btn">Restart Game</button>
+                <button id="main-menu-game-btn">🏠 Main Menu</button>
+            </div>
         </div>
 
         <div id="game-board" class="game-board">
