Add a countdown timer before the game starts

--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@
         <div id="game-board" class="game-board">
         </div>
 
+        <div id="countdown-overlay" class="countdown-overlay hidden">
+            <div class="countdown-number">3</div>
+        </div>
+
         <div id="win-message" class="win-message hidden">
             <h2>You Win!</h2>
             <p>Score: <span id="final-score">0</span></p>
