--- a/index.html
+++ b/index.html
@@ -3,26 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memory Card Game</title>
+    <title>MojiFlip - The Ultimate Memory Game</title>
     <link rel="stylesheet" href="/styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="welcome-screen" class="welcome-screen">
         <div class="content">
-            <h1>Memory Card Game</h1>
-            <p>Select your difficulty:</p>
-            <div class="difficulty-buttons">
-                <button class="diff-btn" data-level="chill">Chill (No Timer)</button>
-                <button class="diff-btn" data-level="easy">Easy (60s)</button>
-                <button class="diff-btn" data-level="medium">Medium (45s)</button>
-                <button class="diff-btn" data-level="hard">Hard (30s)</button>
-                <button class="diff-btn" data-level="wth">WTH (15s)</button>
+            <div class="hero-section">
+                <h1 class="game-title">MojiFlip 🧩</h1>
+                <p class="game-subtitle">Flip, Match, and Win!</p>
+            </div>
+            
+            <div class="level-select-container">
+                <h3>Select Your Challenge</h3>
+                <div class="difficulty-buttons">
+                    <button class="diff-btn" data-level="chill">
+                        <span class="btn-icon">☕</span>
+                        <span class="btn-text">Chill</span>
+                    </button>
+                    <button class="diff-btn" data-level="easy">
+                        <span class="btn-icon">🙂</span>
+                        <span class="btn-text">Easy</span>
+                    </button>
+                    <button class="diff-btn" data-level="medium">
+                        <span class="btn-icon">🤔</span>
+                        <span class="btn-text">Medium</span>
+                    </button>
+                    <button class="diff-btn" data-level="hard">
+                        <span class="btn-icon">🤯</span>
+                        <span class="btn-text">Hard</span>
+                    </button>
+                    <button class="diff-btn" data-level="wth">
+                        <span class="btn-icon">💀</span>
+                        <span class="btn-text">WTH</span>
+                    </button>
+                </div>
+            </div>
+
+            <div class="site-footer">
+                <p>© 2025 MojiFlip Gaming</p>
             </div>
         </div>
     </div>
 
     <div id="game-container" class="container hidden">
-        <h1>Memory Card Game</h1>
+        <h1 class="game-header">MojiFlip</h1>
         
         <div class="game-info">
             <div class="stats">
