--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MojiFlip - The Ultimate Memory Game</title>
+    <title>MojiFlip</title>
     <link rel="stylesheet" href="/styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <div id="welcome-screen" class="welcome-screen">
         <div class="content">
             <div class="hero-section">
-                <h1 class="game-title">MojiFlip 🧩</h1>
+                <h1 class="game-title">MojiFlip 👺</h1>
                 <p class="game-subtitle">Flip, Match, and Win!</p>
             </div>
             
@@ -42,13 +42,13 @@
             </div>
 
             <div class="site-footer">
-                <p>© 2025 MojiFlip Gaming</p>
+                <p>©2025 MojiFlip</p>
             </div>
         </div>
     </div>
 
     <div id="game-container" class="container hidden">
-        <h1 class="game-header">MojiFlip</h1>
+        <h1 class="game-header">MojiFlip 👺</h1>
         
         <div class="game-info">
             <div class="stats">
