Add time on difficulty selection in welcome screen

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="welcome-screen" class="welcome-screen">
         <div class="content">
             <div class="hero-section">
-                <h1 class="game-title">MojiFlip 👺</h1>
+                <h1 class="game-title">MojiFlip 🍃</h1>
                 <p class="game-subtitle">Flip, Match, and Win!</p>
             </div>
             
@@ -21,22 +21,27 @@
                     <button class="diff-btn" data-level="chill">
                         <span class="btn-icon">☕</span>
                         <span class="btn-text">Chill</span>
+                        <span class="btn-time">No Timer</span>
                     </button>
                     <button class="diff-btn" data-level="easy">
                         <span class="btn-icon">🙂</span>
                         <span class="btn-text">Easy</span>
+                        <span class="btn-time">60s</span>
                     </button>
                     <button class="diff-btn" data-level="medium">
                         <span class="btn-icon">🤔</span>
                         <span class="btn-text">Medium</span>
+                        <span class="btn-time">45s</span>
                     </button>
                     <button class="diff-btn" data-level="hard">
                         <span class="btn-icon">🤯</span>
                         <span class="btn-text">Hard</span>
+                        <span class="btn-time">30s</span>
                     </button>
                     <button class="diff-btn" data-level="wth">
                         <span class="btn-icon">💀</span>
                         <span class="btn-text">WTH</span>
+                        <span class="btn-time">15s</span>
                     </button>
                 </div>
             </div>
@@ -48,7 +53,7 @@
     </div>
 
     <div id="game-container" class="container hidden">
-        <h1 class="game-header">MojiFlip 👺</h1>
+        <h1 class="game-header">MojiFlip 🍃</h1>
         
         <div class="game-info">
             <div class="stats">
