--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
     <audio id="bg-music" loop>
         <source src="/assets/sounds-efx/background-music-lofionly.mp3" type="audio/mp3">
     </audio>
+    <audio id="hover-sfx">
+        <source src="/assets/sounds-efx/btn-hover-sfx.mp3" type="audio/mp3">
+    </audio>
+    <audio id="select-sfx">
+        <source src="/assets/sounds-efx/btn-select-sfx.mp3" type="audio/mp3">
+    </audio>
 
     <div id="welcome-screen" class="welcome-screen">
         <div class="content">
