Added background forest sound effect

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <audio id="bg-music" loop>
         <source src="/assets/sounds-efx/background-music-lofionly.mp3" type="audio/mp3">
     </audio>
+    <audio id="bg-forest" loop>
+        <source src="/assets/sounds-efx/background-forest-sfx.m4a" type="audio/mp4">
+    </audio>
     <audio id="hover-sfx">
         <source src="/assets/sounds-efx/btn-hover-sfx.mp3" type="audio/mp3">
     </audio>
