Add countdown sfx and increase countdown to 5 seconds

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <audio id="select-sfx">
         <source src="/assets/sounds-efx/btn-select-sfx.mp3" type="audio/mp3">
     </audio>
+    <audio id="countdown-sfx">
+        <source src="/assets/sounds-efx/count-down-sfx.mp3" type="audio/mp3">
+    </audio>
 
     <div id="welcome-screen" class="welcome-screen">
         <div class="content">
