--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
     <audio id="countdown-sfx">
         <source src="/assets/sounds-efx/count-down-sfx.mp3" type="audio/mp3">
     </audio>
+    <audio id="card-hover-sfx">
+        <source src="/assets/sounds-efx/card-hover-sfx.mp3" type="audio/mp3">
+    </audio>
+    <audio id="card-flip-sfx">
+        <source src="/assets/sounds-efx/card-flip-sfx.mp3" type="audio/mp3">
+    </audio>
 
     <div id="welcome-screen" class="welcome-screen">
         <div class="content">
