Rename the sound files to mp3 and add the game won/lose sfx

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <source src="/assets/sounds-efx/background-music-lofionly.mp3" type="audio/mp3">
     </audio>
     <audio id="bg-forest" loop>
-        <source src="/assets/sounds-efx/background-forest-sfx.m4a" type="audio/mp4">
+        <source src="/assets/sounds-efx/background-forest-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="hover-sfx">
         <source src="/assets/sounds-efx/btn-hover-sfx.mp3" type="audio/mp3">
@@ -40,6 +40,12 @@
     </audio>
     <audio id="not-match-sfx">
         <source src="/assets/sounds-efx/card-not-match-sfx.mp3" type="audio/mp3">
+    </audio>
+    <audio id="game-over-sfx">
+        <source src="/assets/sounds-efx/game-over-sfx.mp3" type="audio/mp3">
+    </audio>
+    <audio id="game-won-sfx">
+        <source src="/assets/sounds-efx/game-won-sfx.mp3" type="audio/mp3">
     </audio>
 
     <div id="welcome-screen" class="welcome-screen">
