--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
     <audio id="game-won-sfx">
         <source src="/assets/sounds-efx/game-won-sfx.mp3" type="audio/mp3">
     </audio>
+    <audio id="clock-ticking-sfx" loop>
+        <source src="/assets/sounds-efx/clock-ticking-sfx.mp3" type="audio/mp3">
+    </audio>
 
     <div id="welcome-screen" class="welcome-screen">
         <div class="content">
