--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+    <div id="leaves-container"></div>
+
     <audio id="bg-forest" loop>
         <source src="/assets/sounds-efx/background-forest-sfx.mp3" type="audio/mp3">
     </audio>
@@ -158,5 +160,6 @@
     </div>
 
     <script type="module" src="scripts/main.js"></script>
+    <script type="module" src="scripts/background.js"></script>
 </body>
 </html>
