Fix the paths and made responsive better

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="./favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
+    <link rel="shortcut icon" href="./favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png" />
     <meta name="apple-mobile-web-app-title" content="MatchaMoji🍵" />
-    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="manifest" href="./site.webmanifest" />
     <title>MatchaMoji 🍵</title>
-    <link rel="stylesheet" href="/styles/styles.css">
+    <link rel="stylesheet" href="./styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -18,37 +18,37 @@
     <div id="leaves-container"></div>
 
     <audio id="bg-forest" loop>
-        <source src="/assets/sounds-efx/background-forest-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/background-forest-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="hover-sfx">
-        <source src="/assets/sounds-efx/btn-hover-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/btn-hover-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="select-sfx">
-        <source src="/assets/sounds-efx/btn-select-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/btn-select-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="countdown-sfx">
-        <source src="/assets/sounds-efx/count-down-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/count-down-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="card-hover-sfx">
-        <source src="/assets/sounds-efx/card-hover-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/card-hover-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="card-flip-sfx">
-        <source src="/assets/sounds-efx/card-flip-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/card-flip-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="match-sfx">
-        <source src="/assets/sounds-efx/card-match-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/card-match-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="not-match-sfx">
-        <source src="/assets/sounds-efx/card-not-match-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/card-not-match-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="game-over-sfx">
-        <source src="/assets/sounds-efx/game-over-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/game-over-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="game-won-sfx">
-        <source src="/assets/sounds-efx/game-won-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/game-won-sfx.mp3" type="audio/mp3">
     </audio>
     <audio id="clock-ticking-sfx" loop>
-        <source src="/assets/sounds-efx/clock-ticking-sfx.mp3" type="audio/mp3">
+        <source src="./assets/sounds-efx/clock-ticking-sfx.mp3" type="audio/mp3">
     </audio>
 
     <div id="welcome-screen" class="welcome-screen">
