--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
                 </div>
             </div>
 
+            <div class="leaderboard-section">
+                <h3>🏆 Top Scores 🏆</h3>
+                <ul id="leaderboard-list" class="leaderboard-list">
+                    <li>Loading scores...</li>
+                </ul>
+            </div>
+
             <div class="site-footer">
                 <p>©2025 MojiFlip</p>
             </div>
