--- a/index.html
+++ b/index.html
@@ -91,15 +91,31 @@
             </div>
 
             <div class="leaderboard-section">
-                <h3>🏆 Top Scores 🏆</h3>
-                <ul id="leaderboard-list" class="leaderboard-list">
-                    <li>Loading scores...</li>
-                </ul>
+                <button id="view-scores-btn" class="view-scores-btn">🏆 View Top Scores</button>
             </div>
 
             <div class="site-footer">
                 <p>©2025 MojiFlip</p>
             </div>
+        </div>
+    </div>
+
+    <div id="leaderboard-modal" class="modal-overlay hidden">
+        <div class="modal-content leaderboard-modal-content">
+            <h2 class="modal-title">🏆 Top 5 Scores 🏆</h2>
+            
+            <div class="leaderboard-headers">
+                <span class="header-rank">Rank</span>
+                <span class="header-score">Score</span>
+                <span class="header-diff">Level</span>
+                <span class="header-time">Time Left</span>
+            </div>
+
+            <ul id="leaderboard-list" class="leaderboard-list">
+                <li>Loading scores...</li>
+            </ul>
+            
+            <button id="close-leaderboard-btn" class="close-modal-btn">Close</button>
         </div>
     </div>
 
